# cpp-bowling-kata

./: .travis.yml  CMakeLists.txt  README.md  build.sh
cmake_modules/: FindCPPUNIT.cmake
include/: CMakeLists.txt  Game.h
src/: CMakeLists.txt  Game.cpp
test/: CMakeLists.txt  GameTest.cpp  mainTest.cpp
